tests/data-clumps/test-cases/parameter-field/simple/positive/typescript/test.config.ts
import type { ScenarioConfig } from '@/scenarioUtils';

const config = {
  "name": "TypeScript parameter-field data clump between service and patient",
  "language": "typescript",
  "sourceDir": "source",
  "expectedReportFile": "report-expected.json",
  "detectorOptions": {}
} satisfies ScenarioConfig;

export default config;
